--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,10 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version= project.version
+println project.version
+group= "com.nathan.NathanIndustries" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "NathanIndustries"
 
 minecraft {
     version = "1.7.10-10.13.4.1614-1.7.10"
